Fixed the homepage on small screens

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -69,24 +69,6 @@ article {
     line-height: 1em;
 }
 
-@media screen and (max-width: 600px) {
-    #post_title {
-        font-size: 2em;
-    }
-}
-
-@media screen and (max-width: 450px) {
-    #post_title {
-        font-size: 1.6em;
-    }
-}
-
-@media screen and (max-width: 350px) {
-    #post_title {
-        font-size: 1.3em;
-    }
-}
-
 #post_subtitle {
     text-align: center;
 }
@@ -123,7 +105,7 @@ pre.highlight {
 /* Home */
 .home_item_title {
     text-align: center;
-    font-size: 2em;
+    font-size: 2.5em;
     line-height: 1em;
     margin-bottom: 0px;
 }
@@ -145,4 +127,24 @@ pre.highlight {
 
 .home_item_excerpt {
     margin-bottom: 60px;
+}
+
+/* Media queries */
+@media screen and (max-width: 600px) {
+    #post_title, .home_item_title {
+        font-size: 2em;
+    }
+
+}
+
+@media screen and (max-width: 450px) {
+    #post_title, .home_item_title {
+        font-size: 1.6em;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    #post_title, .home_item_title {
+        font-size: 1.3em;
+    }
 }
